--- a/.github/workflows/sync-build-deploy.yml
+++ b/.github/workflows/sync-build-deploy.yml
@@ -13,40 +13,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout your repo B
-      - name: Checkout your site repo
+      - name: Checkout site repo
         uses: actions/checkout@v4
 
-      # Checkout upstream repo A
       - name: Checkout upstream Sheets2Website
         uses: actions/checkout@v4
         with:
           repository: 634252452/Sheets2Website
           path: upstream
 
-      # Mirror upstream + apply your config.json
       - name: Prepare site build folder
         run: |
           rm -rf site_build
           mkdir site_build
-
           cp -r upstream/* site_build/
           cp config.json site_build/
 
-      # Upload site build as Pages artifact
-      - name: Upload artifact to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload site as Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: site_build
 
   deploy:
     needs: sync_and_build
     runs-on: ubuntu-latest
-
     permissions:
       pages: write
       id-token: write
 
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
